# generateprevisibines

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Deferred Items (Suggestions).md  GEMINI.md  GeneratePrevisibines.bat  IMPLEMENTATION.md  README.md
.claude/commands/: commit-push.md
docs/: behaviors.md  technical.md  workarounds.md
src/: ckpe_config.rs  config.rs  filesystem.rs  main.rs  mo2_helper.rs  prompts.rs  registry.rs  utils.rs  validation.rs  workflow.rs
src/tools/: archive.rs  creation_kit.rs  dll_manager.rs  fo4edit.rs  mod.rs
