[package]
name = "generateprevisibines"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
env_logger = "0.11.8"
log = "0.4.28"
tempfile = "3.23.0"
walkdir = "2.5.0"
winreg = "0.55.0"

[dependencies.windows]
version = "0.62.1"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[lints.rust]
deprecated = "deny"