[package]
name = "generateprevisibines"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
env_logger = "0.11.8"
log = "0.4.28"
tempfile = "3.23.0"
walkdir = "2.5.0"
winreg = "0.55.0"

mo2-mode = { path = "./mo2-mode" }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
deprecated = "deny"
unsafe_code = "warn"  # Warn on unsafe blocks to ensure they're justified
unused_must_use = "deny"  # Catch ignored Results

[lints.clippy]
# Enable pedantic lints for code quality
pedantic = { level = "warn", priority = -1 }

# Allow specific pedantic lints that conflict with project style or are overly strict
must_use_candidate = "allow"  # Many utility functions don't need #[must_use]
missing_errors_doc = "allow"  # Already have excellent error documentation
missing_panics_doc = "allow"  # Most functions don't panic; documented where relevant
module_name_repetitions = "allow"  # e.g., BuildMode::Clean is fine and clear
